create: mobile responsive for header

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,7 +9,9 @@
   &__search
     margin-right: auto
     margin-left: 108px
-  &-bottom
+  &__menu-button
+    display: none
+  &-buttom
     background-color: $dark
   &-menu
     list-style-type: none
