--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,13 +12,15 @@
       padding-top: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
