--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
+  .swiper
+    &-slide
+      &__image
+        width: 100%
+        object-fit: cover
+        height: 100%
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -21,6 +29,19 @@
   .search
     &__input
       width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right
+      flex-direction: row
+  .booking
+    width: 340px
+  .slider
+    width: 100%
+  .map
+    width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -62,7 +83,19 @@
       &__offer
         order: -1
         margin-left: 0
-
+  .slider
+    height: 350px
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking, .map
+    width: 100%
 @media (max-width: 576px)
   .logo
     width: 99px
+  .slider
+    height: 25px
+  .hotel
+    &__slider
+      margin-bottom: 20px
