--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -55,7 +55,7 @@
     line-height: 18px
 .swiper-container
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &:after
@@ -71,6 +71,7 @@
     z-index: 10
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50%
@@ -166,5 +167,6 @@
 .map
   width: 347px
   height: 213px
-  border-radius: 4px
-  background-color: black
+  border-radius: 10px
+  overflow: hidden
+  background-color: $dark
