--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -168,5 +168,7 @@
   width: 347px
   height: 213px
   border-radius: 10px
-  overflow: hidden
+  overflow-x: hidden
+  overflow-y: hidden
   background-color: $dark
+  cursor: pointer
