--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,8 @@
         object-fit: cover
         height: 100%
 @media (max-width: 992px)
-  .container
+  .container,
+  .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -91,11 +92,24 @@
       min-height: 450px
   .booking, .map
     width: 100%
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
 @media (max-width: 576px)
+
   .logo
     width: 99px
   .slider
-    height: 25px
+    height: 250px
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &__title
+      margin-bottom: 37px
+  .subscribe
+    width: 100%
