--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import "blocks/_hotel"
 // Стили блока Подписки
 @import "blocks/newsletter"
+// Стили для отзывов
+@import "blocks/reviews"
 // Подключение стилей для адаптива
 @import 'media'
