--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,14 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
-  .swiper
-    &-slide
+  .hotel
+    &-slider
       &__image
         width: 100%
         object-fit: cover
         height: 100%
+    &__slide
+      width: 590px
 @media (max-width: 992px)
   .container,
   .newsletter-wrapper
@@ -37,12 +37,16 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
+    &-slider
+      width: 100%
   .booking
     width: 340px
-  .slider
-    width: 100%
   .map
     width: 340px
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -84,12 +88,12 @@
       &__offer
         order: -1
         margin-left: 0
-  .slider
-    height: 350px
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      height: 350px
   .booking, .map
     width: 100%
   .newsletter
@@ -98,8 +102,26 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &__title
+      font-size: 26px
+      line-height: 33px
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &::after, &::before
+          display: none
+      &__button
+        top: 45px
+        &--prev
+          left: 50%
+          margin-left: -65px
+          transform: translate(-50%, 0)
+        &--next
+          right: 50%
+          margin-right: -65px
+          transform: translate(50%, 0)
 @media (max-width: 576px)
-
   .logo
     width: 99px
   .slider
@@ -107,9 +129,15 @@
   .hotel
     &__slider
       margin-bottom: 20px
+    &-slider
+      height: 250px
   .newsletter
     padding: 76px 0 83px 0
     &__title
       margin-bottom: 37px
   .subscribe
     width: 100%
+  .reviews
+    &__title
+      font-size: 18px
+      line-height: 23px
