fixed: distance stars for feedback+scrool

--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -83,6 +83,8 @@
     &__rating
       display: flex
       align-items: center
+      justify-content: space-between
+      width: 48px
     &__text
       font-style: normal
       font-weight: normal
