--- a/css/style.css
+++ b/css/style.css
@@ -1022,6 +1022,10 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 48px;
 }
 
 .reviews-slider__text {
@@ -1243,6 +1247,9 @@ template {
   .reviews__title {
     font-size: 18px;
     line-height: 23px;
+  }
+  .reviews-slider__text {
+    overflow: auto;
   }
 }
 /*# sourceMappingURL=style.css.map */
