--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -121,6 +121,7 @@
           right: 50%
           margin-right: -65px
           transform: translate(50%, 0)
+
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -141,3 +142,6 @@
     &__title
       font-size: 18px
       line-height: 23px
+    &-slider
+      &__text
+        overflow: auto
