fix: width card title(3)

--- a/css/style.css
+++ b/css/style.css
@@ -1115,6 +1115,10 @@ template {
   line-height: 20px;
 }
 
+.card__fix {
+  width: 161px;
+}
+
 .card__button {
   font-style: normal;
   font-weight: 600;
