--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -49,6 +49,8 @@
     font-weight: bold
     font-size: 16px
     line-height: 20px
+  &__fix
+    width: 161px
   &__button
     font-style: normal
     font-weight: 600
