--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import "blocks/reviews"
 // Стили для развлечения
 @import "blocks/activities"
+// Стили для подвала
+@import "blocks/footer"
 // Подключение стилей для адаптива
 @import 'media'
