--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,6 +12,9 @@
   .card
     width: 230px
     height: 230px
+  .footer
+    &__input
+      flex-basis: 100%
 @media (max-width: 992px)
   .container,
   .newsletter-wrapper
@@ -58,6 +61,34 @@
   .card
     width: 340px
     height: 230px
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px
+    &__input
+      flex-basis: 47%
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+      grid-column: span 2
+    &__additional
+      grid-column: span 2
+    &__legal
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        grid-column: span 5
+        grid-row: 4
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -138,6 +169,9 @@
   .card
     width: 49%
     height: 255px
+  .footer
+    &__input
+      flex-basis: 45%
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -163,3 +197,33 @@
         overflow: auto
   .card
     width: 100%
+  .footer
+    &__input
+      flex-basis: 100%
+    &-wrapper
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__additional
+      grid-row: 3
+      grid-column: 1
+    &__categories
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+        width: 280px
+      &-form
+        grid-row: 7
+        grid-column: 1
+        width: 280px
