create: commute but&info for footer

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -227,3 +227,9 @@
         grid-row: 7
         grid-column: 1
         width: 280px
+    &__bi
+      display: flex
+      flex-direction: column-reverse
+      flex-wrap: wrap
+      height: 80px
+      justify-content: space-between
