fix: adedd padding for footer__contact-form

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -226,7 +226,9 @@
       &-form
         grid-row: 7
         grid-column: 1
-        width: 280px
+        width: 320px
+        padding-left: 20px
+        padding-right: 20px
     &__bi
       display: flex
       flex-direction: column-reverse
