--- a/css/style.css
+++ b/css/style.css
@@ -1661,7 +1661,9 @@ template {
     grid-row: 7;
     -ms-grid-column: 1;
     grid-column: 1;
-    width: 280px;
+    width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .footer__bi {
     display: -webkit-box;
