--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -106,3 +106,7 @@
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+  &__bi
+    display: flex
+    justify-content: space-between
+    width: 690px
